src/MiniLenguaje.java
/* Generated By:JavaCC: Do not edit this line. MiniLenguaje.java */
import java.io.FileInputStream;
import java.io.FileNotFoundException;
import clasesJava.*;
import java.util.ArrayList;
import java.util.Arrays;

public class MiniLenguaje implements MiniLenguajeConstants {
  public static boolean verbose = false;

  public static Tabla_simbolos tabla_simbolos;

  public static GeneracionCodigo generacion_codigo;

  public static int nivel;

  public static final int TBD = - 1;

  public static int dir;

  public static final int DIR_INICIAL = 3;

  public static void main(String args []) throws ParseException, FileNotFoundException
  {
    for (int i = 0; i < args.length; i++)
    {
      if (args [i].equals("-v"))
      verbose = true;
    }
    //MiniLenguaje parser = new MiniLenguaje(System.in);
    FileInputStream file = null;
    try
    {
      generacion_codigo = GeneracionCodigo.getInstancia(args [1]);
      file = new FileInputStream(args [0] + ".ml");
      MiniLenguaje parser = new MiniLenguaje(file);
    }
    catch (FileNotFoundException e)
    {
      // TODO: Explicar instrucciones de ejecución
      System.err.print("ERROR: No se ha podido encontrar el archivo: " + args [0]);
      System.exit(- 1);
    }
    catch (ArrayIndexOutOfBoundsException e)
    {
      // TODO: Explicar instrucciones de ejecución
      System.err.print("ERROR: No se ha especificado un archivo");
      System.exit(- 1);
    }
    try
    {
      MiniLenguaje.programa(verbose);
    }
    catch (ParseException e)
    {
      System.err.println(e.getMessage());
      e.printStackTrace();
      //MiniLenguaje.ReInit(System.in);
    }
    catch (Error e)
    {
      e.printStackTrace();
      System.err.println(e.getMessage());
      System.exit(0);
    }
  }

  private static void error_skipto(int kind)
  {
    //ParseException e = generateParseException();
    //System.out.println(e.toString());    
    Token t = token;
    while (t.kind != kind && t.kind != EOF)
    {
      t = getNextToken();
    }
  }

  private static void error_skipto(int kind1, int kind2)
  {
    //ParseException e = generateParseException();
    //System.out.println(e.toString());    
    Token t;
    do
    {
      t = getNextToken();
      System.out.println(t);
    }
    while (t.kind != kind1 && t.kind != kind2 && t.kind != EOF);
  }

  private static void error_sintactico(ParseException e)
  {
    System.err.println("ERROR SINTACTICO: " + e.getMessage());
    e.printStackTrace();
    generacion_codigo.pararGeneracionCodigo();
    getNextToken();
  }

  private static void error_semantico(Exception e)
  {
    generacion_codigo.pararGeneracionCodigo();
    System.err.println(e);
  }

  private static void error_semantico(String e)
  {
    generacion_codigo.pararGeneracionCodigo();
    System.err.println(new SemanticException(token, e));
  }

  private static RegistroExpr comprobacionExpresion(RegistroExpr r1, RegistroExpr r2, String operador)
  {
    RegistroExpr resultado = new RegistroExpr();
    if ((r1.tipo != Tipo_variable.DESCONOCIDO) && (r2.tipo != Tipo_variable.DESCONOCIDO) &&
    (r1.tipo != r2.tipo))
    {
      error_semantico("Los operandos deben ser del mismo tipo");
      resultado = new RegistroExpr(Tipo_variable.DESCONOCIDO);
    }
    else if ((r1.tipo != Tipo_variable.DESCONOCIDO) && (r2.tipo != Tipo_variable.DESCONOCIDO) &&
    (r1.tipo == r2.tipo))
    {
      resultado = new RegistroExpr(r1, r2, operador);
    }
    return resultado;
  }

/************************************
************* PROGRAMA **************
*************************************/

// <tPROGRAMA> <tIDENTIFICADOR> <tFIN_SENTENCIA> declaracion_variables() declaracion_acciones() bloque_sentencias()
  static final public void programa(boolean verbose) throws ParseException {
    tabla_simbolos = Tabla_simbolos.inicializar_tabla(31);
    nivel = 0;
    dir = DIR_INICIAL;
    String etiq;
    Token t;
    jj_consume_token(tPROGRAMA);
    t = jj_consume_token(tIDENTIFICADOR);
    tabla_simbolos.introducir_programa(t.image, TBD);
    etiq = generacion_codigo.getEtiqueta();
    generacion_codigo.escribir("; Programa " + t.image);
    generacion_codigo.escribir("ENP " + etiq);
    jj_consume_token(tFIN_SENTENCIA);
    declaracion_variables();

    declaracion_acciones();
    //System.out.println("Fin de declaracion de acciones");
    generacion_codigo.escribir("; Comienzo de " + t.image);
    generacion_codigo.escribir(etiq + ":");
    bloque_sentencias();
    tabla_simbolos.eliminar_programa();
    generacion_codigo.escribir("; Fin de " + t.image);
    generacion_codigo.escribir("LVP");
    generacion_codigo.escribirPrograma();
    //System.out.println("Fin de " + t.image);

    jj_consume_token(0);
  }

// (declaracion()<tFIN_SENTENCIA>)*
  static final public void declaracion_variables() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tENTERO:
      case tDECIMAL:
      case tBOOLEANO:
      case tCARACTER:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      try {
        declaracion();
        jj_consume_token(tFIN_SENTENCIA);
      } catch (ParseException e) {
      error_sintactico(e);
      declaracion_variables();
      }
    }
  }

// tipo_variables() identificadores()
  static final public void declaracion() throws ParseException {
  Tipo_variable tipo;
  ArrayList < RegistroIdentificador > identificadores;
  Simbolo s;
    try {
      tipo = tipo_variables();
      identificadores = identificadores();
      for (RegistroIdentificador identificador : identificadores)
      {
        s = tabla_simbolos.introducir_variable(identificador.nombre, tipo, nivel, dir);
        if (s == null)
        {
          error_semantico(new ExcepcionTablaSimbolos(identificador.nombre, token.beginLine, nivel, tabla_simbolos.buscar_simbolo(identificador.nombre)));
        }
        else
        {
          if (identificador.isVector)
          {
            s.setVector(true);
            s.setLongitud(identificador.size);
          }
          dir = dir + s.getLongitud();
        }
      }
    } catch (ParseException e) {
    error_sintactico(e);
    }
  }

// <tENTERO> | <tCARACTER> | <tBOOLEANO> | <tDECIMAL>
  static final public Tipo_variable tipo_variables() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tENTERO:
      jj_consume_token(tENTERO);
    {if (true) return Tipo_variable.ENTERO;}
      break;
    case tCARACTER:
      jj_consume_token(tCARACTER);
    {if (true) return Tipo_variable.CHAR;}
      break;
    case tBOOLEANO:
      jj_consume_token(tBOOLEANO);
    {if (true) return Tipo_variable.BOOLEANO;}
      break;
    case tDECIMAL:
      jj_consume_token(tDECIMAL);
    {if (true) return Tipo_variable.DECIMAL;}
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// <tIDENTIFICADOR>(<tCOMA><tIDENTIFICADOR>)*
  static final public ArrayList < RegistroIdentificador > identificadores() throws ParseException {
  ArrayList < RegistroIdentificador > identificadores = new ArrayList();
  Token t, size;
  RegistroIdentificador regId;
    try {
      t = jj_consume_token(tIDENTIFICADOR);
      regId = new RegistroIdentificador(t.image);
      identificadores.add(regId);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tCORCHETE_IZQ:
        jj_consume_token(tCORCHETE_IZQ);
        size = jj_consume_token(tVALOR_ENTERO);
        jj_consume_token(tCORCHETE_DCHA);
      regId.size = Integer.parseInt(size.image);
      regId.isVector = true;
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
      }
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tCOMA:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_2;
        }
        jj_consume_token(tCOMA);
        t = jj_consume_token(tIDENTIFICADOR);
      regId = new RegistroIdentificador(t.image);
      identificadores.add(regId);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tCORCHETE_IZQ:
          jj_consume_token(tCORCHETE_IZQ);
          size = jj_consume_token(tVALOR_ENTERO);
          jj_consume_token(tCORCHETE_DCHA);
      regId.size = Integer.parseInt(size.image);
      regId.isVector = true;
          break;
        default:
          jj_la1[4] = jj_gen;
          ;
        }
      }
      {if (true) return identificadores;}
    } catch (ParseException e) {
    error_sintactico(e);
    {if (true) return identificadores;}
    }
    throw new Error("Missing return statement in function");
  }

// (declaracion_accion())*
  static final public void declaracion_acciones() throws ParseException {
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tACCION:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_3;
      }
      try {
        declaracion_accion();
      } catch (ParseException e) {
      error_sintactico(e);
      declaracion_acciones();
      }
    }
  }

// cabecera_accion() <tFIN_SENTENCIA> declaracion_variables() declaracion_acciones() bloque_sentencias()
  static final public void declaracion_accion() throws ParseException {
  int dir_prev = dir;
  dir = DIR_INICIAL;
  String etiq = generacion_codigo.getEtiqueta();
  Token t;
    try {
      t = cabecera_accion(etiq);
      generacion_codigo.escribir("JMP " + etiq);
      jj_consume_token(tFIN_SENTENCIA);
      declaracion_variables();
      declaracion_acciones();
      generacion_codigo.escribir("; Codigo accion " + t.image);
      generacion_codigo.escribir(etiq + ":");
      bloque_sentencias();
      generacion_codigo.escribir("CSF ");
      generacion_codigo.escribir("; Fin accion " + t.image);
      dir = dir_prev;
    } catch (ParseException e) {
    error_sintactico(e);
    }
  }

// <tACCION> <tIDENTIFICADOR> parametros_formales()
  static final public Token cabecera_accion(String etiqueta) throws ParseException {
  ArrayList < Simbolo > parametros;
  Simbolo accion, s;
  Boolean buscarParametros = true;
  Token t;
    try {
      jj_consume_token(tACCION);
      t = jj_consume_token(tIDENTIFICADOR);
      generacion_codigo.escribir("; Declaraciones accion " + t.image);
      accion = tabla_simbolos.introducir_accion(t.image, nivel, etiqueta);
      if (accion == null)
      {
        error_semantico(new ExcepcionTablaSimbolos(t, nivel, tabla_simbolos.buscar_simbolo(token.image)));
        buscarParametros = false;
      }
      nivel++;
      //System.out.println("Aumenta nivel accion: " + accion.getNombre() + " nivel: " + nivel);

      parametros = parametros_formales();
      if (buscarParametros)
      {
        for (Simbolo parametro : parametros)
        {
          accion.introducir_parametro(parametro);
        }
        generacion_codigo.escribir("; Parametros accion " + t.image);
        for (int i = parametros.size() - 1; i >= 0; i--)
        {
          s = parametros.get(i);
          generacion_codigo.escribir("SRF " + (nivel - s.getNivel()) + " " + s.getDireccion());
          generacion_codigo.escribir("ASGI");
        }
      }
      {if (true) return t;}
    } catch (ParseException e) {
    error_sintactico(e);
    }
    throw new Error("Missing return statement in function");
  }

// ((<tPARENTESIS_IZQ> parametros()) (<tFIN_SENTENCIA> parametros())* <tPARENTESIS_DCHA>)? 
  static final public ArrayList < Simbolo > parametros_formales() throws ParseException {
  if (MiniLenguaje.verbose) System.out.println("Parametros formales \u005cn");
  ArrayList < Simbolo > parametros = new ArrayList < Simbolo > ();
  ArrayList < Simbolo > masParametros;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tPARENTESIS_IZQ:
        jj_consume_token(tPARENTESIS_IZQ);
        parametros = parametros();
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case tFIN_SENTENCIA:
            ;
            break;
          default:
            jj_la1[6] = jj_gen;
            break label_4;
          }
          jj_consume_token(tFIN_SENTENCIA);
          masParametros = parametros();
      parametros.addAll(masParametros);
        }
        jj_consume_token(tPARENTESIS_DCHA);
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
      {if (true) return parametros;}
    } catch (ParseException e) {
    error_sintactico(e);
    {if (true) return parametros;}
    }
    throw new Error("Missing return statement in function");
  }

// expresion() (<tCOMA> expresion())*
  static final public ArrayList < Simbolo > lista_parametros(Clase_parametro clase, Tipo_variable tipo) throws ParseException {
  ArrayList < RegistroIdentificador > identificadores;
  ArrayList < Simbolo > parametros = new ArrayList();
  Simbolo parametro;
    try {
      identificadores = identificadores();
      for (RegistroIdentificador identificador : identificadores)
      {
        parametro = tabla_simbolos.introducir_parametro(identificador.nombre, tipo, clase, nivel, dir);
        if (identificador.isVector)
        {
          parametro.setVector(true);
          parametro.setLongitud(identificador.size);
        }
        if (parametro == null)
        {
          error_semantico(new ExcepcionTablaSimbolos(identificador.nombre, token.beginLine, nivel, tabla_simbolos.buscar_simbolo(identificador.nombre)));
        }
        else
        {
          dir = dir + parametro.getLongitud();
          parametros.add(parametro);
        }
      }
      {if (true) return parametros;}
    } catch (ParseException e) {
    error_sintactico(e);
    {if (true) return parametros;}
    }
    throw new Error("Missing return statement in function");
  }

// clase_parametros() tipo_variables() lista_parametros()
  static final public ArrayList < Simbolo > parametros() throws ParseException {
  Clase_parametro clase;
  Tipo_variable tipo;
  ArrayList < Simbolo > parametros = new ArrayList();
    try {
      clase = clase_parametros();
      tipo = tipo_variables();
      parametros = lista_parametros(clase, tipo);
      {if (true) return parametros;}
    } catch (ParseException e) {
    error_sintactico(e);
    {if (true) return parametros;}
    }
    throw new Error("Missing return statement in function");
  }

// <tVAL> | <tREF>
  static final public Clase_parametro clase_parametros() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tVAL:
      jj_consume_token(tVAL);
    {if (true) return Clase_parametro.VAL;}
      break;
    case tREF:
      jj_consume_token(tREF);
    {if (true) return Clase_parametro.REF;}
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// <tPRINCIPIO> lista_sentencias() <tFIN>
  static final public void bloque_sentencias() throws ParseException {
    try {
      jj_consume_token(tPRINCIPIO);
      lista_sentencias();
      jj_consume_token(tFIN);
      //System.out.println("######################################################################################");    
      //System.out.println("Tabla antes de borrar nivel " + nivel);
      //System.out.println(tabla_simbolos);
      tabla_simbolos.ocultar_parametros(nivel);
      tabla_simbolos.eliminar_variables(nivel);
      // Elimino los parámetros ocultos al eliminar las acciones
      tabla_simbolos.eliminar_acciones(nivel);
      nivel--;
      //System.out.println("\nTabla despues de borrar nivel " + (nivel + 1));
      //System.out.println(tabla_simbolos);
      //System.out.println("######################################################################################");

    } catch (ParseException e) {
    error_sintactico(e);
    }
  }

// (sentencia())* 
  static final public void lista_sentencias() throws ParseException {
    label_5:
    while (true) {
      try {
        sentencia();
      } catch (ParseException e) {
      error_sintactico(e);
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tSI:
      case tMQ:
      case tESCRIBIR:
      case tLEER:
      case tIDENTIFICADOR:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_5;
      }
    }
  }
